# Basic-Turtlebot-Simulation-for-Obstacle-Avoidance-with-ROS2

./: CMakeLists.txt  README.md  package.xml
launch/: ros_bag.launch.py  spawn_turtlebot3.launch.py  turtlebot3_world.launch.py
results/: cppcheck.txt  cpplint.txt
results/saved_ros_bag/: metadata.yaml  saved_ros_bag_0.db3
src/: redirect_from_obstacles.cpp
